--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Rally Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "dependencies": {
     "rally": "^0.2.0",
     "slackbots": "^0.5.1"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
